--- a/deep_learning/notebooks/assignment_instructions.qmd
+++ b/deep_learning/notebooks/assignment_instructions.qmd
@@ -15,9 +15,9 @@ The grading will center around 5 main points:
 
 - Does the report include a section describing the data? __Done__
 - Does the report include a paragraph detailing the main objective(s) of this analysis? __Done__
-- Does the report include a section with variations of a Deep Learning model and specifies which one is the model that best suits the main objective(s) of this analysis? __Pending__
-- Does the report include a clear and well presented section with key findings related to the main objective(s) of the analysis? __Pending__
-- Does the report highlight possible flaws in the model and a plan of action to revisit this analysis with additional data or different modeling techniques? __Pending__
+- Does the report include a section with variations of a Deep Learning model and specifies which one is the model that best suits the main objective(s) of this analysis? __Done__
+- Does the report include a clear and well presented section with key findings related to the main objective(s) of the analysis? __Done__
+- Does the report highlight possible flaws in the model and a plan of action to revisit this analysis with additional data or different modeling techniques? __Done__
 
 ## Instructions
 
@@ -31,7 +31,7 @@ Sections required in your report:
 - Main objective of the analysis that also specifies whether your model will be focused on a specific type of Deep Learning or Reinforcement Learning algorithm and the benefits that your analysis brings to the business or stakeholders of this data. __Done__
 - Brief description of the data set you chose, a summary of its attributes, and an outline of what you are trying to accomplish with this analysis. __Done__
 - Brief summary of data exploration and actions taken for data cleaning or feature engineering. __Done__
-- Summary of training at least three variations of the Deep Learning model you selected. For example, you can use different clustering techniques or different hyperparameters. __Pending__
-- A paragraph explaining which of your Deep Learning models you recommend as a final model that best fits your needs in terms of accuracy or explainability. __Pending__
-- Summary Key Findings and Insights, which walks your reader through the main findings of your modeling exercise. __Pending__
-- Suggestions for next steps in analyzing this data, which may include suggesting revisiting this model or adding specific data features to achieve a better model. __Pending__
+- Summary of training at least three variations of the Deep Learning model you selected. For example, you can use different clustering techniques or different hyperparameters. __Done__
+- A paragraph explaining which of your Deep Learning models you recommend as a final model that best fits your needs in terms of accuracy or explainability. __Done__
+- Summary Key Findings and Insights, which walks your reader through the main findings of your modeling exercise. __Done__
+- Suggestions for next steps in analyzing this data, which may include suggesting revisiting this model or adding specific data features to achieve a better model. __Done__
